# nova-scotia-test

./: Cargo.toml  README.md
src/: main.rs
