[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.12.0"
nova-scotia = { git = "https://github.com/fraserdscott/Nova-Scotia", branch = "wasm-witness-generation" }
nova-snark = "0.8.1"
serde = "1.0"
serde_json = "1.0.85"